Creació de l'aplicació base amb les funcionalitats bàsiques.