@@ -6,7 +6,7 @@
 
   <groupId>me.bossaa55</groupId>
   <artifactId>quinamusical</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>QuinaMusical</name>
 
   <properties>
@@ -16,15 +16,14 @@
   <dependencies>
     <dependency>
       <groupId>org.openjfx</groupId>
-      <artifactId>javafx-controls</artifactId>
-      <version>20.0.1</version>
+      <artifactId>javafx-fxml</artifactId>
+      <version>22.0.1</version>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
-      <artifactId>javafx-fxml</artifactId>
-      <version>20.0.1</version>
+      <artifactId>javafx-media</artifactId>
+      <version>22.0.1</version>
     </dependency>
-
 <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -42,11 +41,45 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.4</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer
+                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>me.bossaa55.quinamusical.MainLauncher</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.13.0</version>
+        <version>3.8.0</version>
         <configuration>
-          <source>20</source>
-          <target>20</target>
+          <release>11</release>
+          <compilerArgs>
+            <arg>--add-exports</arg>
+            <arg>javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>javafx.base/com.sun.javafx.event=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>javafx.base/com.sun.javafx.application=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -55,10 +88,9 @@
         <version>0.0.8</version>
         <executions>
           <execution>
-            <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>me.bossaa55.quinamusical/me.bossaa55.quinamusical.HelloApplication</mainClass>
+              <mainClass>me.bossaa55.quinamusical/me.bossaa55.quinamusical.MainLauncher</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
